[tool.poetry]
name = "fmlib"
version = "0.1.0"
description="Fleet Management Library"
authors = ["Argentina Ortega Sáinz"]

[tool.poetry.dependencies]
python = "^3.5"
inflection = "^0.3.1"
pymodm = "^0.4.1"
pymongo = "^3.9.0"
gunicorn = "^19.9.0"
falcon = "^2.0.0"
rospkg = "^1.1.10 "

[tool.poetry.dev-dependencies]
pytest = "^3.0"
pylint = "^2.3"
pytest-cov = "^2.7"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
