[tool.poetry]
name = "fmlib"
version = "0.1.0"
description="Fleet Management Library"
authors = ["Argentina Ortega Sáinz"]

[tool.poetry.dependencies]
python = "^3.5"
inflection = "^0.3.1"
pymodm = "^0.4.1"
gunicorn = "^19.9.0"
falcon = "^2.0.0"
empy = "^3.3.4"
rospkg = "^1.1.10 "
catkin-pkg= "^0.4.13"
rospy_message_converter = { git = "https://github.com:/ropod-project/rospy_message_converter.git" }

[tool.poetry.dev-dependencies]
pytest = "^3.0"
pylint = "^2.3"
pytest-cov = "^2.7"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
